css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Poppins', sans-serif;
    background-color: #E6E6E6;
    overflow-x: hidden;
}

ul{
    list-style-type: none;
}
#text-input ul{
    list-style-type: disc;
}

table{
    border-collapse: collapse;
    width: 100%;
}
table, th, td{
    border: 1px solid #000;
    padding: 5px;
    text-align: left;
}

/* flexbox */
.d-flex{
    display: flex;
}

.flex-column{
    flex-direction: column;
}

.justify-content-center{
    justify-content: center;
}
.justify-content-start{
    justify-content: flex-start;
}
.justify-content-end{
    justify-content: flex-end;
}
.justify-content-between{
    justify-content: space-between;
}
.justify-content-around{
    justify-content: space-around;
}
.justify-content-evenly{
    justify-content: space-evenly;
}

.flex-wrap{
    flex-wrap: wrap;
}

.align-items-center{
    align-items: center;
}

/* layout and containers */
.col-100{
    width: 100%;
}
.col-90{
    width: 90%;
}
.col-80{
    width: 80%;
}
.col-70{
    width: 70%;
}
.col-60{
    width: 60%;
}
.col-50{
    width: 50%;
}
.col-40{
    width: 40%;
}
.col-30{
    width: 30%;
}
.col-20{
    width: 20%;
}
.col-10{
    width: 10%;
}

/* page content */
/* header */
header{
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 100;
    background-color: #E6E6E6;
}
/* title bar */
#title-bar{
    height: 40px;
    padding: 5px;
    background-color: #185ABD;
    color: #FFF;
}
#logo{
    height: 100%;
    width: 300px;
    cursor: default;

}
#logo img{
    height: 100%;
    margin-right: 5px;
}
#title{
    min-width: 50px;
    background-color: #D0DCEE;
    color: #185ABD;
    padding: 5px 15px;
}
#user{
    width: 300px;
    gap: 5px;
}
#user button{
    padding: 5px 10px;
    border: none;
    cursor: pointer;
}
#register, #login{
    background-color: #FAFAFA;
}

/* toolbar top */
#toolbar-top{
    width: 100%;
    margin: 0 5px;
    /* background-color: #2A579A; */
}
#toolbar-top li{
    padding: 5px 10px;
    gap: 5px;
    cursor: pointer;
}

.big-toolbar{
    height: 100px;
    width: 99vw;
    padding: 5px;
    margin: 0 5px;
    border-radius: 10px;
    background-color: #FAFAFA;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
    position: fixed;
    top: 71px;
}
.hidden-toolbar{
    transform: translateX(+100%); /* Slide out of view */
    visibility: hidden;
    opacity: 0;
    transition-delay: 0.3s; /* Delay the transition to allow for the slide out effect */
}
.visible-toolbar{
    transform: translateX(0); /* Slide into view */
    visibility: visible;
    transition: 0.3s ease-in-out;
    opacity: 1;
    z-index: 200;
}

.section-label{
    font-size: 15px;
    color: #666;
}

.toolbar-section{
    padding: 0 5px;
    border-right: 1px solid #ccc;
}

/* toolbar home */
/* #toolbar-home{
    background-color: #FAFAFA;
} */

/* clipboard */
#clipboard-tools{
    width: 150px;
    height: 100%;
}
#clipboard-tools button{
    padding: 5px;
    border: none;
    cursor: pointer;
    background-color: #fff;
}
.copy{
    padding: 10px;
}
.cut, .paste{
    padding: 5px;
}
.copy img{
    max-width: 50px;
}
.cut img, .paste img{
    max-width: 25px
}

/* font */
#font-tools{
    width: 500px;
}
select[name=font]{
    width: 150px;
    height: 25px;
    padding: 0 5px;
}
input[name=font-size]{
    width: 70px;
    height: 25px;

}
input[type=color]{
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background-color: transparent;
    width: 25px;
    height: 18px;
    border: none;
    cursor: pointer;
    margin: 0 3px;
}
input[type="color"]::-webkit-color-swatch {
    border-radius: 5px;
    /* box-shadow: 0 0 0 2px #ffffff; */
}
input[type="color"]::-moz-color-swatch {
    border-radius: 5px;
    /* box-shadow: 0 0 0 2px #ffffff; */
}
#format-tools{
    padding: 0 5px;
}
#format-tools button{
    width: 30px;
    height: 30px;
    background-color: transparent;
    border: none;
    padding: 3px;
    margin: 0 2px;
}
/* paragraph */
#paragraph-tools{
    width: 200px;
}
#paragraph-tools button{
    width: 30px;
    height: 30px;
    background-color: transparent;
    border: none;
    padding: 3px;
    margin: 0 2px;
}
/* styles */
#styles-tools{
    width: 100px;
}
/* #styles-tools div:first-child img{
    width: 40px;
} */
 #styles-tools select{
    width: 60px;
    height: 60px;
    text-align: center;
    font-size: large;
}

/* Insert toolbar */
.big-button{
    width: 60px;
    height: 60px;
    font-size: 30px;
    /* background-color: #E6E6E6; */
    cursor: pointer;
    margin: 0 2px;
}
/* Insert new page */
#table-form-container{
    max-width: 300px;
}
#table-form-container input{
    margin: 4px 10px;
    padding: 2px;
}

/* body */
main{
    overflow: auto;
    padding: 0px 0 30px 0;
}
.sheet{
    margin: 10px auto;
    padding: 25mm 20mm 20mm 20mm;
    background-color: #fff;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
}
.sheet.A4{
    width: 210mm;
    height: 297mm;
}
.text-input{
    width: 100%;
    height: 100%;
    overflow-wrap: break-word;
}
.text-input:focus{
    outline: none;
}

/* footer */
footer{
    width: 100%; 
    height: 25px;
    background-color: #FAFAFA;
    border: 1px solid #ccc;
    position: fixed;
    bottom: 0;
    color: #444;
}
footer div{
    height: 100%;
}
footer span{
    padding: 0 5px;
}
#left-footer>div, #right-footer>div{
    padding: 0 10px;
}
.zoom label{
    padding: 0 10px;
    height: 100%;
}

/* styling input range */
/* reset to baseline */
input[type=range] {
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    cursor: pointer;
    width: 100px;
}
/* styling track */
input[type=range]::-webkit-slider-runnable-track {
    height: 1px;
    background: #666;
}
input[type=range]::-moz-range-track {
    height: 1px;
    background: #666;
}

/* styling thumb */
input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    height: 15px;
    width: 5px;
    background: #444;
    margin-top: -7px;
}
input[type=range]::-moz-range-thumb {
    /* firefox default thumb is a circle, we need to remove that */
    border: none;
    border-radius: 0;
    background-color: #444;
    height: 15px;
    width: 5px;
}

/* sidebar */
#sidebar{
    width: 200px;
    height: calc(100vh - 40px);
    background-color: #FFF;
    position: fixed;
    top: 40px;
    z-index: 999;
    font-size: large;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); 
    color: #444;
}
.hidden-sidebar{
    left: -200px;
    transition: 0.3s ease-in-out;
}
.active-sidebar{
    left: 0px;
    transition: 0.3s ease-in-out;
}
#close-sidebar{
    padding: 10px 20px;
    cursor: pointer;
    margin: 10px 0;
    color: #000;
}
#sidebar ul{
    list-style-type: none;
    margin: 10px 0;
}
#sidebar ul li{
    padding: 10px 20px;
    cursor: pointer;
}
.sidebar-container{
    padding: 0 15px;
}
.sidebar-container hr{
    border: none;
    height: 1px;
    background-color: #999;

}
.selected-sidebar{
    background-color: #E6E6E6;
    border-left: 3px solid #185ABD;
    padding-left: 17px !important;
    color: #000;
}

/* text */
.text-center{
    text-align: center;
}

/* decorative */
.selected{
    border-bottom: #185ABD 3px solid;
    font-weight: bold;
}

/* hover */
#toolbar-top li:hover:not(.selected){
    border-bottom: #666 3px solid;
}
#clipboard-tools button:hover, #format-tools button:hover, #paragraph-tools button:hover{
    background-color: #E6E6E6;
}
#user button:hover{
    background-color: #124078;
    color: #FFF;
}
#sidebar ul li:hover, #close-sidebar:hover:not(.selected-sidebar){
    background-color: #E6E6E6;
    border-left: 3px solid #185ABD;
    padding-left: 17px !important;
    color: #000;
}
input[type=range]:hover::-webkit-slider-thumb {
    background: #185ABD;
}
input[type=range]:hover::-moz-range-thumb {
    background: #185ABD;
}
#zoom-label:hover{
    cursor: pointer;
    background-color: #E6E6E6;
}
#left-footer>div:hover{
    cursor: pointer;
    background-color: #E6E6E6;
}

@page {
    size: A4;
    margin: 0
}

@media print {
    /* Hide the toolbar and footer when printing */
    #title-bar, #toolbar-top, .big-toolbar,footer.d-flex, footer #left-footer, footer #right-footer, #sidebar {
        display: none;
    }
    .sheet {
        box-shadow: none; /* Remove shadow for print */
        margin: 0; /* Remove margin for print */
        /* A4 size */
        width: 210mm;
        height: 297mm; 
        box-sizing: border-box; /* Include padding in width and height */
        page-break-after: always; /* Ensure each sheet starts on a new page */
    }
    body {
        margin: 0; /* Remove margin for print */
    }
    main{
        padding: 0; /* Remove padding for print */
    }
}

